[gd_scene load_steps=7 format=3 uid="uid://drthbyxvuibx5"]

[ext_resource type="PackedScene" uid="uid://bn3b3t3pwf5vw" path="res://scenes/collidable_object/collidable_object.tscn" id="1_xdxto"]
[ext_resource type="Script" path="res://scenes/power_up/power_up.gd" id="2_rmdui"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3lfi"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_foqre"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_opor3"]
resource_name = "flicker"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.25, 0.3, 0.35, 0.4, 0.45, 0.48, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_26taq"]
_data = {
"RESET": SubResource("Animation_foqre"),
"flicker": SubResource("Animation_opor3")
}

[node name="PowerUp" instance=ExtResource("1_xdxto")]
collision_layer = 64
collision_mask = 1
script = ExtResource("2_rmdui")
_life_time = 10.0
_speed = 50.0

[node name="Sprite2D" type="Sprite2D" parent="." index="0"]
scale = Vector2(0.5, 0.5)

[node name="Shape" parent="." index="1"]
shape = SubResource("RectangleShape2D_g3lfi")

[node name="Timer" type="Timer" parent="." index="2"]
wait_time = 10.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
root_node = NodePath("../Timer")
libraries = {
"": SubResource("AnimationLibrary_26taq")
}

[node name="Sfx" type="AudioStreamPlayer2D" parent="." index="4"]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
